2009-04-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotation/XYPointerAnnotation.java
    (draw): Altered drawing of arrow line.

----------  JFREECHART 1.0.13 RELEASED ------------------------

2009-04-20  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateToFindRangeBounds): Handle BoxAndWhiskerCategoryDataset.

2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/PaintScaleLegend.java
    (draw): Adjusted fill rectangles.

2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/CategoryAxis.java
    (CategoryAxis): Leave tick marks visible by default,
    (draw): Call drawTickMarks(),
    (drawTickMarks): New method,
    * source/org/jfree/chart/axis/CategoryAxis3D.java
    (draw): Call drawTickMarks(),
    * source/org/jfree/chart/axis/NumberAxis3D.java
    (NumberAxis3D): Leave axis line visible by default.

2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2686872 by Peter Kolb:
    * source/org/jfree/chart/title/PaintScaleLegend.java: Implemented
    AxisChangeListener,
    (PaintScaleLegend): Register as axis change listener,
    (setAxis): Deregister as change listener on old axis, register as listener
    on new axis,
    (axisChanged): New method,
    (draw): Check isStripOutlineVisible flag.

2009-04-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/StandardChartTheme.java
    (baselinePaint): New field,
    (createDarknessTheme): Modify baselinePaint,
    (StandardChartTheme): Initialise baselinePaint,
    (getBaselinePaint): New method,
    (setBaselinePaint): Likewise,
    (applyToCategoryPlot): Apply baselinePaint,
    (applyToXYPlot): Likewise,
    (writeObject): Updated for new field,
    (readObject): Likewise.

2009-04-10  David Gilbert  <david.gilbert@object-refinery.com>
